--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -5,6 +5,6 @@ h4,
 h5,
 h6 {
   font-family: "Poppins", sans-serif;
-  font-weight: 700;
-  color: $color-Very-Dark-Cyan;
+  font-weight: $fw-bold;
+  color: $clr-dark-200;
 }
