--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -9,13 +9,8 @@
 @import "layout/navigation";
 @import "layout/header";
 @import "layout/footer";
-@import "layout/forms";
+@import "layout/home";
+@import "layout/about";
 
 @import "components/buttons";
-@import "components/carousel";
-@import "components/slider";
 @import "components/utilities";
-
-@import "pages/home";
-@import "pages/about";
-@import "pages/contact";
